hopefully fixing the tooltip wrap

--- a/app/styles/network/show.scss
+++ b/app/styles/network/show.scss
@@ -228,6 +228,7 @@ div#network-container {
       overflow: visible !important;
       .tooltip {
         display: none;
+        white-space: normal;
       }
 
       &.disabled-vis-button {
